[package]
name = "inf01145"
version = "0.1.0"
edition = "2021"
authors = ["Alice Carra", "Eric PEracchi Pisoni"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.33"
postgres = { version = "0.19.7", features = ["with-chrono-0_4"] }
repl-rs = "0.2.8"
